--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="Rifki-CV" content="">
-  <meta name="Rifki" content="">
+  <meta name="Elly-CV" content="">
+  <meta name="Elly" content="">
 
-  <title>Rifki-CV</title>
+  <title>Elly Arwendi - Curriculum Vitae</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
