--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="Elly-CV" content="">
+  <meta name="Elly - Curriculum Vitae" content="">
   <meta name="Elly" content="">
 
-  <title>Elly Arwendi - Curriculum Vitae</title>
+  <title>Elly - Curriculum Vitae</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/laravel.png">
+  <link rel="shortcut icon" href="img/codeigniter.png">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
@@ -28,9 +28,9 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">RIFKI</span>
+      <span class="d-block d-lg-none">Elly</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/me.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,9 +53,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -64,25 +64,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h2 class="mb-0">RIFKI
-          <span class="text-primary">(Junior Web Programmer)</span>
+        <h2 class="mb-0">Elly
+          <span class="text-primary">(Network Engineer)</span>
         </h2>
-        <div class="subheading mb-5">Cokroaminoto Street · Muara Badak, 75382 · (+62)-852-5070-8309 ·
-          <a href="mailto:name@email.com">rifkipelajar@gmail.com</a>
+        <div class="subheading mb-5">Pelita 4 Street · Rasau Jaya, 78382 · (+62)-857-8711-0300 ·
+          <a href="mailto:name@email.com">arwendiel828@gmail.com</a>
         </div>
-        <p class="lead mb-5">I'm fresh graduted  from department computer science, Mulawarman university. Ambitious person and want to learn something new about web programming. I'm beginner for Laravel and make project with Laravel for less than a year but I think I need more experience about  web programming project.</p>
+        <p class="lead mb-5">Network engineer with a hands-on approach and technological mindset for designing and implementing IT network architecture, including configuration, optimization and supporting network management systems.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/rifki-cs-724653102/">
+          <a href="https://www.linkedin.com/in/elly-arwendi-93420a193">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/RifkiCS29">
+          <a href="https://github.com/arwendi">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/Rifki_CS29">
+          <a href="https://twitter.com/EArwendi">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.facebook.com/rifki.jackson.12">
+          <a href="https://www.facebook.com/elly.day.7">
             <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://instagram.com/ellyarwendi">
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </div>
@@ -96,36 +99,75 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">IT Staff Intern</h3>
-            <div class="subheading mb-3">Sekretariat Daerah Kota Samarinda</div>
-            <p>Make An Information Management System Web Based to handle every letters at Sekretariat Daerah Kota Samarinda</p>
+            <h3 class="mb-0">PT. Fajar Saudara Lestari</h3>
+            <div class="subheading mb-3">Network Engineer</div>
+            <ul>
+              <li>Ran diagnostics to determine source of network errors.</li>
+              <li>Collaborated with colleagues to create effective system security.</li>
+              <li>Recorded system updates and activities.</li>
+              <li>Implemented network improvements.</li>
+              <li>Analyzed systems to identify and perform needed maintenance.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2017 - October 2017</span>
+            <span class="text-primary">September 2018 - Present</span>
           </div>
         </div>
 
-        <div class="card-group">
-          <div class="card">
-            <img class="card-img-top" src="img/home.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 align="center" class="card-title">Home Page</h5>
-            </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">PT. Kalimantan Sawit Kusuma</h3>
+            <div class="subheading mb-3">Network Engineer</div>
+            <ul>
+              <li>Ran diagnostics to determine source of network errors.</li>
+              <li>Collaborated with colleagues to create effective system security.</li>
+              <li>Recorded system updates and activities.</li>
+              <li>Implemented network improvements.</li>
+              <li>Analyzed systems to identify and perform needed maintenance.</li>
+            </ul>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="img/dashboard-admin.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 align="center" class="card-title">Dashboard Admin</h5>
-            </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2017 - Present</span>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="img/dashboard-bagian.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 align="center" class="card-title">Dashboard Department</h5>
-            </div>
-          </div>
-
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">PT. Kalimantan Sawit Kusuma</h3>
+            <div class="subheading mb-3">Software Engineer</div>
+            <ul>
+              <li>Consulted senior programmer/developer to obtain solutions for complicated logic errors, and rewrote the code using correct syntax to get expected output.</li>
+              <li>Developed appropriate coding modules in different languages such as C++/ Java and wrote SQL queries as required.</li>
+              <li>Maintained daily logs for different projects by regularly updating company's software and prepared appropriate workflow reports.</li>
+
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2016 - Agustus 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Hakasima Inti PT</h3>
+            <div class="subheading mb-3">Internet Marketing</div>
+            <ul>
+              <li>Create a solid business plan after doing a big research on the competition.</li>
+              <li>Setting an optimum budget for online marketing and advertisement strategies.</li>
+              <li>Negotiations with different clients interested in the companies products.</li>
+              <li>Creating online campaigns using the latest and competitive web AD tools.</li>
+              <li>Maintaining sales records and handling inquiries related to SEO.</li>
+              <li>Putting together teams for different projects to achieve advanced SEO results.</li>
+              <li>Developing and creating marketing opportunities for web-based projects.</li>
+
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Maret 2016 - Juni 2016</span>
+          </div>
+        </div>
+
+    
       </div>
 
     </section>
@@ -138,22 +180,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Mulawarman University</h3>
-            <div class="subheading mb-3">Bachelor of Computer Science</div>
-            <p>GPA: 3.65</p>
+            <h3 class="mb-0">STMIK Pontianak</h3>
+            <div class="subheading mb-3">Bachelor's Degree in Computers Science at STMIK Pontianak</div>
+            <p>GPA: 3.00</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2014 - September 2018</span>
+            <span class="text-primary">2015</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Informal Education</h3>
-            <div class="subheading mb-3">Mikrotik Certification at Mulawarman University</div>
+            <div class="subheading mb-3">CCNA (Cisco Certified Network Administrator) at ExecuTrain</div>
+            <div class="subheading mb-3">MTCNA (Mikrotik Training Certified Network Associate) at Nixtrain</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2016</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
@@ -181,34 +224,21 @@
             <i class="fab fa-bootstrap"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-laravel"></i>
+            <i class="fab fa-php"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-vuejs"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab fa-aws"></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Networking</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Cisco</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+            Mikrotik</li>
       </div>
     </section>
 
@@ -217,8 +247,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time for sharing knowledge. In Programmer Group, I am sharing web programming tutorial to newbie and answer every question about fundamental web programming.</p>
-        <p class="mb-0">I follow a number of sci-fi and fantasy genre movies and television shows, and I spend a large amount of my free time exploring the latest technology advancements in the back-end and front-end web development.</p>
+        <p>reading self-development books, and inproving on my communication and social skill</p>
       </div>
     </section>
 
