--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="Elly - Curriculum Vitae" content="">
   <meta name="Elly" content="">
 
-  <title>Elly - Curriculum Vitae</title>
+  <title>Elly Arwendi - Curriculum Vitae</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -251,7 +251,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <!-- <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
@@ -267,6 +267,8 @@
         </ul>
       </div>
     </section>
+    
+    -->
 
   </div>
 
