--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="Elly - Curriculum Vitae" content="">
-  <meta name="Elly" content="">
+  <meta name="Elly Arwendi - Curriculum Vitae" content="">
+  <meta name="Elly Arwendi" content="">
 
   <title>Elly Arwendi - Curriculum Vitae</title>
 
@@ -28,7 +28,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Elly</span>
+      <span class="d-block d-lg-none">Elly Arwendi</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/me.jpg" alt="">
       </span>
@@ -64,7 +64,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h2 class="mb-0">Elly
+        <h2 class="mb-0">Elly Arwendi &nbsp;&nbsp;
           <span class="text-primary">(Network Engineer)</span>
         </h2>
         <div class="subheading mb-5">Pelita 4 Street · Rasau Jaya, 78382 · (+62)-857-8711-0300 ·
