--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a href="https://www.linkedin.com/in/elly-arwendi-93420a193">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/arwendi">
+          <a href="https://github.com/arwendi/">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://twitter.com/EArwendi">
