--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">PT. Fajar Tirta Natural</h3>
+            <div class="subheading mb-3">Graphic Design</div>
+            <ul>
+              <li>Conceptualizing visuals based on requirements.</li>
+              <li>Creating images and layouts by hand or using design software.</li>
+              <li>Testing graphics across various media.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Oktober 2020 - Present</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -110,7 +125,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2018 - Present</span>
+            <span class="text-primary">September 2018 - September 2020</span>
           </div>
         </div>
 
@@ -127,7 +142,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2017 - Present</span>
+            <span class="text-primary">September 2017 - September 2020</span>
           </div>
         </div>
 
