--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h2 class="mb-0">Elly Arwendi &nbsp;&nbsp;
-          <span class="text-primary">(Network Engineer)</span>
+          <span class="text-primary">(GRAPHIC DESIGN)</span>
         </h2>
         <div class="subheading mb-5">Pelita 4 Street · Rasau Jaya, 78382 · (+62)-857-8711-0300 ·
           <a href="mailto:name@email.com">arwendiel828@gmail.com</a>
